Ensemble 4 models resulting 74.2

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -136,7 +136,7 @@
       "source": [
         "# Function that reads the data from the csv file, increases the size of the images and returns the images and their labels\n",
         "    # dataset: Data path\n",
-        "def get_data(dataset, pixel=48):\n",
+        "def get_data(dataset):\n",
         "    \n",
         "    file_stream = file_io.FileIO(dataset, mode='r')\n",
         "    data = pd.read_csv(file_stream)\n",
@@ -144,20 +144,18 @@
         "    X, Y = data[' pixels'].tolist(), data['emotion'].values\n",
         "    X = np.array(X, dtype='float32').reshape(-1,48,48,1)\n",
         "    X = X/255.0\n",
-        "    if (pixel==48):\n",
-        "      X_res = X\n",
-        "    else:\n",
-        "      X_res = np.zeros((X.shape[0], Resize_pixelsize,Resize_pixelsize,3))\n",
-        "      for ind in range(X.shape[0]): \n",
-        "          sample = X[ind]\n",
-        "          sample = sample.reshape(48, 48)\n",
-        "          image_resized = resize(sample, (Resize_pixelsize, Resize_pixelsize), anti_aliasing=True)\n",
-        "          X_res[ind,:,:,:] = image_resized.reshape(Resize_pixelsize,Resize_pixelsize,1)\n",
+        "   \n",
+        "    X_res = np.zeros((X.shape[0], Resize_pixelsize,Resize_pixelsize,3))\n",
+        "    for ind in range(X.shape[0]): \n",
+        "        sample = X[ind]\n",
+        "        sample = sample.reshape(48, 48)\n",
+        "        image_resized = resize(sample, (Resize_pixelsize, Resize_pixelsize), anti_aliasing=True)\n",
+        "        X_res[ind,:,:,:] = image_resized.reshape(Resize_pixelsize,Resize_pixelsize,1)\n",
         "\n",
         "    Y_res = np.zeros((Y.size, 7))\n",
         "    Y_res[np.arange(Y.size),Y] = 1    \n",
         "    \n",
-        "    return  X_res, Y_res"
+        "    return  X, X_res, Y_res"
       ],
       "execution_count": 0,
       "outputs": []
@@ -173,8 +171,8 @@
         "dev_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/dev.csv'\n",
         "test_dataset_dir = '/content/drive/My Drive/cs230 project/collab/fer2013/test.csv'\n",
         "\n",
-        "X_dev, Y_dev   = get_data(dev_dataset_dir)\n",
-        "X_test, Y_test   = get_data(test_dataset_dir)"
+        "X_dev, X_res_dev, Y_dev   = get_data(dev_dataset_dir)\n",
+        "X_test, X_res_test, Y_test   = get_data(test_dataset_dir)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -250,7 +248,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 155
         },
-        "outputId": "1a8106b0-fa45-4dd6-a110-469ce3297b19"
+        "outputId": "42bd0098-ccc6-4ace-910c-eec8d21f22ac"
       },
       "source": [
         "print('\\n# Evaluate on dev data')\n",
@@ -261,18 +259,18 @@
         "results_test = model.evaluate(X_test,Y_test)\n",
         "print('test loss, test acc:', results_test)"
       ],
-      "execution_count": 10,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "\n",
             "# Evaluate on dev data\n",
-            "3589/3589 [==============================] - 6s 2ms/step\n",
+            "3589/3589 [==============================] - 0s 97us/step\n",
             "dev loss, dev acc: [1.0376124443799282, 0.6358317080049602]\n",
             "\n",
             "# Evaluate on test data\n",
-            "3589/3589 [==============================] - 0s 79us/step\n",
+            "3589/3589 [==============================] - 0s 89us/step\n",
             "test loss, test acc: [0.9683632022260324, 0.6631373641765957]\n"
           ],
           "name": "stdout"
@@ -282,7 +280,228 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ED86bdWtpdCL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 155
+        },
+        "outputId": "79d1bfd3-a775-4615-90a3-5a4cf9e39ef1"
+      },
+      "source": [
+        "model2 = load_model('/content/drive/My Drive/cs230 project/models/soa-SGD_LR_0.01000-EPOCHS_300-BS_128-DROPOUT_0.4test_acc_0.657.h5')\n",
+        "print('\\n# Evaluate on dev data')\n",
+        "results_dev = model2.evaluate(X_dev,Y_dev)\n",
+        "print('dev loss, dev acc:', results_dev)\n",
+        "\n",
+        "print('\\n# Evaluate on test data')\n",
+        "results_test = model2.evaluate(X_test,Y_test)\n",
+        "print('test loss, test acc:', results_test)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "# Evaluate on dev data\n",
+            "3589/3589 [==============================] - 0s 110us/step\n",
+            "dev loss, dev acc: [1.0297004918794375, 0.6514349401030377]\n",
+            "\n",
+            "# Evaluate on test data\n",
+            "3589/3589 [==============================] - 0s 76us/step\n",
+            "test loss, test acc: [0.9837366009230201, 0.6570075230035121]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wtkh5xsNvbBG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 155
+        },
+        "outputId": "81898fd3-f50e-4478-f366-a9f10ef8832f"
+      },
+      "source": [
+        "model3 = load_model('/content/drive/My Drive/cs230 project/models/tl/tl-SGD_LR_0.01000-EPOCHS_100-BS_128-DROPOUT_0.5test_acc_0.991.h5')\n",
+        "print('\\n# Evaluate on dev data')\n",
+        "results_dev = model3.evaluate(X_res_dev,Y_dev)\n",
+        "print('dev loss, dev acc:', results_dev)\n",
+        "\n",
+        "print('\\n# Evaluate on test data')\n",
+        "results_test = model3.evaluate(X_res_test,Y_test)\n",
+        "print('test loss, test acc:', results_test)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "# Evaluate on dev data\n",
+            "3589/3589 [==============================] - 10s 3ms/step\n",
+            "dev loss, dev acc: [1.0430927014211386, 0.6960156032404019]\n",
+            "\n",
+            "# Evaluate on test data\n",
+            "3589/3589 [==============================] - 8s 2ms/step\n",
+            "test loss, test acc: [0.9163703456932072, 0.732237392047814]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7fNpbezx0lek",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 155
+        },
+        "outputId": "37292598-4dff-4898-b56e-bda9bd8bb981"
+      },
+      "source": [
+        "model4 = load_model('/content/drive/My Drive/cs230 project/models/tl/tl-SGD_LR_0.01000-EPOCHS_20-BS_128-DROPOUT_0.5test_acc_0.677.h5')\n",
+        "print('\\n# Evaluate on dev data')\n",
+        "results_dev = model4.evaluate(X_res_dev,Y_dev)\n",
+        "print('dev loss, dev acc:', results_dev)\n",
+        "\n",
+        "print('\\n# Evaluate on test data')\n",
+        "results_test = model4.evaluate(X_res_test,Y_test)\n",
+        "print('test loss, test acc:', results_test)"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "# Evaluate on dev data\n",
+            "3589/3589 [==============================] - 10s 3ms/step\n",
+            "dev loss, dev acc: [1.2324885091980242, 0.6698244636388966]\n",
+            "\n",
+            "# Evaluate on test data\n",
+            "3589/3589 [==============================] - 8s 2ms/step\n",
+            "test loss, test acc: [1.1428996915603356, 0.6767901922707174]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bkG2Ff2ep-R3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "models_SOA = [model, model2]\n",
+        "models_TL = [model3, model4]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EJqnQzpmpHBN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# make an ensemble prediction for multi-class classification\n",
+        "def ensemble_predictions(models_SOA, testX, models_TL, testresX):\n",
+        "  # make predictions\n",
+        "  yhats = np.zeros((len(models_SOA)+len(models_TL),testX.shape[0],7))\n",
+        "\n",
+        "  for model_ind in range(len(models_SOA)):\n",
+        "    yhat = models_SOA[model_ind].predict(testX)\n",
+        "    yhats[model_ind,:,:] = yhat\n",
+        "\n",
+        "  for model_ind in range(len(models_TL)):\n",
+        "    yhat = models_TL[model_ind].predict(testresX)\n",
+        "    yhats[len(models_SOA)+model_ind,:,:] = yhat\n",
+        "\n",
+        "  summed = np.sum(yhats, axis=0)\n",
+        "  result = np.argmax(summed, axis=1)\n",
+        "  return result\n",
+        " \n",
+        "# evaluate a specific number of members in an ensemble\n",
+        "def evaluate_n_members(models_SOA, testX, models_TL, testresX, testy):\n",
+        "\t# select a subset of members\n",
+        "\t#subset = members[:n_members]\n",
+        "\t#print(len(subset))\n",
+        "\t# make prediction\n",
+        "\tyhat = ensemble_predictions(models_SOA, testX, models_TL, testresX)\n",
+        "\t# calculate accuracy\n",
+        "\treturn accuracy_score(testy, yhat)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BeDZdqSOiAXA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5c1e08fa-63db-4428-a2ba-6295d90f35dd"
+      },
+      "source": [
+        "ens_acc = evaluate_n_members(models_SOA, X_test, models_TL, X_res_test, np.argmax(Y_test, axis=1))\n",
+        "print(ens_acc)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.7417107829478964\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7yKjgEv5z3fy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9e8fddb5-e3c9-4a80-ac44-55f71557d4bb"
+      },
+      "source": [
+        "ens_acc = evaluate_n_members(models_SOA, X_dev, models_TL, X_res_dev, np.argmax(Y_dev, axis=1))\n",
+        "print(ens_acc)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.726664809139036\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L0wbYzu6qYGt",
         "colab_type": "code",
         "colab": {}
       },
