--- a/fer2013_Turker_Senet_Fast.ipynb
+++ b/fer2013_Turker_Senet_Fast.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gwdg7Sv3XBaP",
-        "outputId": "7fa4f15e-17dd-41a6-d38a-75f9c8f39c65",
+        "outputId": "63bfdfbd-93cc-4118-871c-344e92fddca1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 534
@@ -63,12 +63,12 @@
           "text": [
             "Collecting keras-vggface\n",
             "  Downloading https://files.pythonhosted.org/packages/2f/7d/5f0319ebdc09ac1a2272364fa9583f5067b6f8aff93fbbf8835d81cbaad7/keras_vggface-0.6-py3-none-any.whl\n",
+            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.17.5)\n",
             "Requirement already satisfied: keras in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (2.2.5)\n",
             "Requirement already satisfied: scipy>=0.14 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.4.1)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (2.8.0)\n",
             "Requirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (3.13)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (2.8.0)\n",
             "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (6.2.2)\n",
-            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.17.5)\n",
             "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.12.0)\n",
             "Requirement already satisfied: keras-preprocessing>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from keras->keras-vggface) (1.1.0)\n",
             "Requirement already satisfied: keras-applications>=1.0.8 in /usr/local/lib/python3.6/dist-packages (from keras->keras-vggface) (1.0.8)\n",
@@ -79,16 +79,16 @@
             "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (2.4)\n",
             "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (2.4.1)\n",
             "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (3.1.3)\n",
-            "Requirement already satisfied: pillow>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (6.2.2)\n",
             "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (1.4.1)\n",
+            "Requirement already satisfied: pillow>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (6.2.2)\n",
             "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from PyWavelets>=0.4.0->scikit-image) (1.17.5)\n",
             "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from networkx>=2.0->scikit-image) (4.4.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (0.10.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.6.1)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.1.0)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.4.6)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from cycler>=0.10->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.12.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.6.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (0.10.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib!=3.0.0,>=2.0.0->scikit-image) (45.2.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.1->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.12.0)\n",
             "Requirement already satisfied: pydot in /usr/local/lib/python3.6/dist-packages (1.3.0)\n",
             "Requirement already satisfied: pyparsing>=2.1.4 in /usr/local/lib/python3.6/dist-packages (from pydot) (2.4.6)\n"
           ],
@@ -101,7 +101,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "2nz38mJZXN_P",
-        "outputId": "7a868276-ab90-46bc-a70d-e1dd90f013af",
+        "outputId": "8544f5cb-e22b-4f8c-d929-15c910209cb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "1fZczU8lGkX-",
         "colab_type": "code",
-        "outputId": "cd9bcd98-563b-4ca6-a583-6aec0d965b6f",
+        "outputId": "0ab887a0-3430-4616-bb0d-7a8e454ce039",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 123
@@ -179,7 +179,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nUcd6yIGduUW",
-        "outputId": "f5d02afd-9b1c-4f3a-a374-2c9f3dd03a4c",
+        "outputId": "c097e58f-a254-4441-f105-207aa37ee52b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -212,7 +212,7 @@
         "EPOCHS = 20\n",
         "BS = 128\n",
         "DROPOUT_RATE = 0.5\n",
-        "FROZEN_LAYER_NUM = 101\n",
+        "FROZEN_LAYER_NUM = 201\n",
         "\n",
         "ADAM_LEARNING_RATE = 0.001\n",
         "SGD_LEARNING_RATE = 0.01\n",
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "itKZtFV0F7b1",
         "colab_type": "code",
-        "outputId": "23816efa-c99e-4f88-d40d-7a4b74f552f6",
+        "outputId": "82201753-8002-4291-e068-b673ff35de29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 640
@@ -247,8 +247,8 @@
         "# for layer in vgg_notop.layers:\n",
         "#     print(layer,\"[\"+str(l)+\"]\")\n",
         "#     l=l+1\n",
-        "    \n",
-        "batch_norm_indices = [2, 6, 9, 13, 14, 18, 21, 24, 28, 31, 34, 38, 41, 45, 46, 53, 56, 60, 63, 66, 70, 73, 76, 80, 83, 87, 88, 92, 95, 98, 102, 105, 108, 112, 115, 118, 122, 125, 128, 132, 135, 138, 142, 145, 149, 150, 154, 157, 160, 164, 167, 170]\n",
+        "\n",
+        "batch_norm_indices = [2, 6, 9, 12, 21, 25, 28, 31, 42, 45, 48, 59, 62, 65, 74, 78, 81, 84, 95, 98, 101, 112, 115, 118, 129, 132, 135, 144, 148, 151, 154, 165, 168, 171, 182, 185, 188, 199, 202, 205, 216, 219, 222, 233, 236, 239, 248, 252, 255, 258, 269, 272, 275]    \n",
         "for i in range(FROZEN_LAYER_NUM):\n",
         "    if i not in batch_norm_indices:\n",
         "        vgg_notop.layers[i].trainable = False\n",
@@ -300,7 +300,7 @@
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4271: The name tf.nn.avg_pool is deprecated. Please use tf.nn.avg_pool2d instead.\n",
             "\n",
             "Downloading data from https://github.com/rcmalli/keras-vggface/releases/download/v2.0/rcmalli_vggface_tf_notop_senet50.h5\n",
-            "104947712/104944616 [==============================] - 7s 0us/step\n",
+            "104947712/104944616 [==============================] - 3s 0us/step\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3733: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
@@ -339,7 +339,7 @@
         "              image_resized = resize(sample, (pixelsize, pixelsize), anti_aliasing=True)\n",
         "              X_res[ind,:,:,:] = image_resized.reshape(pixelsize,pixelsize,1)\n",
         "\n",
-        "          Y_res = np.zeros((Y.size, Y.max()+1))\n",
+        "          Y_res = np.zeros((Y.size, 7))\n",
         "          Y_res[np.arange(Y.size),Y] = 1\n",
         "          if aug is not None:\n",
         "              (X_res, Y_res) = next(aug.flow(np.array(X_res),\n",
@@ -401,10 +401,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "pLISdlaStbUn",
-        "outputId": "69456203-c9e3-4c6b-8eee-e3ff4e1dc883",
+        "outputId": "08a0740f-0172-470b-8f5d-e3f616290fca",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 172
+          "height": 637
         }
       },
       "source": [
@@ -424,15 +424,42 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
-            "\n",
             "Epoch 1/20\n",
-            " 52/224 [=====>........................] - ETA: 5:13 - loss: 2.4435 - acc: 0.1994"
+            "224/224 [==============================] - 428s 2s/step - loss: 1.1790 - acc: 0.5498 - val_loss: 1.1327 - val_acc: 0.5758\n",
+            "Epoch 2/20\n",
+            "224/224 [==============================] - 413s 2s/step - loss: 1.0461 - acc: 0.6095 - val_loss: 1.0592 - val_acc: 0.6196\n",
+            "Epoch 3/20\n",
+            "224/224 [==============================] - 413s 2s/step - loss: 0.9802 - acc: 0.6414 - val_loss: 0.9929 - val_acc: 0.6391\n",
+            "Epoch 4/20\n",
+            "224/224 [==============================] - 409s 2s/step - loss: 0.9321 - acc: 0.6634 - val_loss: 1.0082 - val_acc: 0.6394\n",
+            "Epoch 5/20\n",
+            "224/224 [==============================] - 409s 2s/step - loss: 0.8884 - acc: 0.6768 - val_loss: 0.9665 - val_acc: 0.6463\n",
+            "Epoch 6/20\n",
+            "224/224 [==============================] - 406s 2s/step - loss: 0.8559 - acc: 0.6856 - val_loss: 0.9768 - val_acc: 0.6457\n",
+            "Epoch 7/20\n",
+            "224/224 [==============================] - 407s 2s/step - loss: 0.8174 - acc: 0.7030 - val_loss: 0.9966 - val_acc: 0.6469\n",
+            "Epoch 8/20\n",
+            "224/224 [==============================] - 408s 2s/step - loss: 0.7892 - acc: 0.7104 - val_loss: 0.9484 - val_acc: 0.6637\n",
+            "Epoch 9/20\n",
+            "224/224 [==============================] - 409s 2s/step - loss: 0.7604 - acc: 0.7245 - val_loss: 1.1018 - val_acc: 0.6232\n",
+            "Epoch 10/20\n",
+            "224/224 [==============================] - 410s 2s/step - loss: 0.7375 - acc: 0.7338 - val_loss: 1.0056 - val_acc: 0.6502\n",
+            "Epoch 11/20\n",
+            "224/224 [==============================] - 408s 2s/step - loss: 0.7049 - acc: 0.7459 - val_loss: 0.9243 - val_acc: 0.6772\n",
+            "Epoch 12/20\n",
+            "224/224 [==============================] - 409s 2s/step - loss: 0.6804 - acc: 0.7517 - val_loss: 0.9974 - val_acc: 0.6661\n",
+            "Epoch 13/20\n",
+            "224/224 [==============================] - 403s 2s/step - loss: 0.6584 - acc: 0.7611 - val_loss: 1.0098 - val_acc: 0.6595\n",
+            "Epoch 14/20\n",
+            "224/224 [==============================] - 406s 2s/step - loss: 0.6380 - acc: 0.7701 - val_loss: 1.3553 - val_acc: 0.6163\n",
+            "Epoch 15/20\n",
+            "224/224 [==============================] - 402s 2s/step - loss: 0.6185 - acc: 0.7766 - val_loss: 1.0475 - val_acc: 0.6565\n",
+            "Epoch 16/20\n",
+            "224/224 [==============================] - 391s 2s/step - loss: 0.5916 - acc: 0.7892 - val_loss: 1.0415 - val_acc: 0.6691\n",
+            "Epoch 17/20\n",
+            "224/224 [==============================] - 385s 2s/step - loss: 0.5748 - acc: 0.7922 - val_loss: 1.0471 - val_acc: 0.6703\n",
+            "Epoch 18/20\n",
+            " 97/224 [===========>..................] - ETA: 3:23 - loss: 0.5592 - acc: 0.7998"
           ],
           "name": "stdout"
         }
