--- a/fer2013_Charles_VGG_with_class_weights.ipynb
+++ b/fer2013_Charles_VGG_with_class_weights.ipynb
@@ -44,11 +44,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gwdg7Sv3XBaP",
-        "outputId": "ab3d1b09-4476-4724-d9cb-3ba001826155",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 557
-        }
+        "colab": {}
       },
       "source": [
         "%tensorflow_version 1.x\n",
@@ -56,56 +52,15 @@
         "!pip install scikit-image\n",
         "!pip install pydot"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting keras-vggface\n",
-            "  Downloading https://files.pythonhosted.org/packages/2f/7d/5f0319ebdc09ac1a2272364fa9583f5067b6f8aff93fbbf8835d81cbaad7/keras_vggface-0.6-py3-none-any.whl\n",
-            "Requirement already satisfied: scipy>=0.14 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.4.1)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (2.8.0)\n",
-            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.17.5)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (3.13)\n",
-            "Requirement already satisfied: keras in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (2.2.5)\n",
-            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (1.12.0)\n",
-            "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (from keras-vggface) (6.2.2)\n",
-            "Requirement already satisfied: keras-applications>=1.0.8 in /usr/local/lib/python3.6/dist-packages (from keras->keras-vggface) (1.0.8)\n",
-            "Requirement already satisfied: keras-preprocessing>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from keras->keras-vggface) (1.1.0)\n",
-            "Installing collected packages: keras-vggface\n",
-            "Successfully installed keras-vggface-0.6\n",
-            "Requirement already satisfied: scikit-image in /usr/local/lib/python3.6/dist-packages (0.16.2)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (1.4.1)\n",
-            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (3.1.3)\n",
-            "Requirement already satisfied: pillow>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (6.2.2)\n",
-            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (2.4.1)\n",
-            "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (1.1.1)\n",
-            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.6/dist-packages (from scikit-image) (2.4)\n",
-            "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from scipy>=0.19.0->scikit-image) (1.17.5)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.4.6)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (0.10.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.1.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.6.1)\n",
-            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.6/dist-packages (from networkx>=2.0->scikit-image) (4.4.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from cycler>=0.10->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.12.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib!=3.0.0,>=2.0.0->scikit-image) (45.2.0)\n",
-            "Requirement already satisfied: pydot in /usr/local/lib/python3.6/dist-packages (1.3.0)\n",
-            "Requirement already satisfied: pyparsing>=2.1.4 in /usr/local/lib/python3.6/dist-packages (from pydot) (2.4.6)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "2nz38mJZXN_P",
-        "outputId": "b85b7408-a592-467a-c36d-6815f0bce627",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -133,73 +88,36 @@
         "\n",
         "import pydot"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1fZczU8lGkX-",
         "colab_type": "code",
-        "outputId": "2d01af55-be19-44c5-92c1-f757bf9a4d4e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 127
-        }
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "nUcd6yIGduUW",
-        "outputId": "dafce6f7-503d-4972-8698-c7cbd4ad03f7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
+        "colab": {}
       },
       "source": [
         "print(tf.__version__)\n",
         "print(keras.__version__)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1.15.0\n",
-            "2.2.5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -209,7 +127,7 @@
         "colab": {}
       },
       "source": [
-        "EPOCHS = 20\n",
+        "EPOCHS = 10\n",
         "BS = 128\n",
         "DROPOUT_RATE = 0.5\n",
         "FROZEN_LAYER_NUM = 19\n",
@@ -228,11 +146,7 @@
       "metadata": {
         "id": "itKZtFV0F7b1",
         "colab_type": "code",
-        "outputId": "e09b0cb3-3505-43c1-abc8-050caf02779d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "colab": {}
       },
       "source": [
         "vgg_notop = VGGFace(model='vgg16', include_top=False, input_shape=(Resize_pixelsize, Resize_pixelsize, 3), pooling='avg')\n",
@@ -260,96 +174,8 @@
         "\n",
         "model.compile(optimizer=sgd, loss='categorical_crossentropy', metrics=['accuracy'])"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:4267: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-            "\n",
-            "Downloading data from https://github.com/rcmalli/keras-vggface/releases/download/v2.0/rcmalli_vggface_tf_notop_vgg16.h5\n",
-            "58916864/58909280 [==============================] - 2s 0us/step\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:190: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:197: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:203: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:207: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:216: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:223: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
-            "\n",
-            "Model: \"vggface_vgg16\"\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
-            "_________________________________________________________________\n",
-            "conv1_1 (Conv2D)             (None, 224, 224, 64)      1792      \n",
-            "_________________________________________________________________\n",
-            "conv1_2 (Conv2D)             (None, 224, 224, 64)      36928     \n",
-            "_________________________________________________________________\n",
-            "pool1 (MaxPooling2D)         (None, 112, 112, 64)      0         \n",
-            "_________________________________________________________________\n",
-            "conv2_1 (Conv2D)             (None, 112, 112, 128)     73856     \n",
-            "_________________________________________________________________\n",
-            "conv2_2 (Conv2D)             (None, 112, 112, 128)     147584    \n",
-            "_________________________________________________________________\n",
-            "pool2 (MaxPooling2D)         (None, 56, 56, 128)       0         \n",
-            "_________________________________________________________________\n",
-            "conv3_1 (Conv2D)             (None, 56, 56, 256)       295168    \n",
-            "_________________________________________________________________\n",
-            "conv3_2 (Conv2D)             (None, 56, 56, 256)       590080    \n",
-            "_________________________________________________________________\n",
-            "conv3_3 (Conv2D)             (None, 56, 56, 256)       590080    \n",
-            "_________________________________________________________________\n",
-            "pool3 (MaxPooling2D)         (None, 28, 28, 256)       0         \n",
-            "_________________________________________________________________\n",
-            "conv4_1 (Conv2D)             (None, 28, 28, 512)       1180160   \n",
-            "_________________________________________________________________\n",
-            "conv4_2 (Conv2D)             (None, 28, 28, 512)       2359808   \n",
-            "_________________________________________________________________\n",
-            "conv4_3 (Conv2D)             (None, 28, 28, 512)       2359808   \n",
-            "_________________________________________________________________\n",
-            "pool4 (MaxPooling2D)         (None, 14, 14, 512)       0         \n",
-            "_________________________________________________________________\n",
-            "conv5_1 (Conv2D)             (None, 14, 14, 512)       2359808   \n",
-            "_________________________________________________________________\n",
-            "conv5_2 (Conv2D)             (None, 14, 14, 512)       2359808   \n",
-            "_________________________________________________________________\n",
-            "conv5_3 (Conv2D)             (None, 14, 14, 512)       2359808   \n",
-            "_________________________________________________________________\n",
-            "pool5 (MaxPooling2D)         (None, 7, 7, 512)         0         \n",
-            "_________________________________________________________________\n",
-            "global_average_pooling2d_1 ( (None, 512)               0         \n",
-            "=================================================================\n",
-            "Total params: 14,714,688\n",
-            "Trainable params: 14,714,688\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "None\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:148: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3733: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
-            "False\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/optimizers.py:793: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3576: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -465,11 +291,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "pLISdlaStbUn",
-        "outputId": "852f4b98-0aa9-43f5-8014-a201704825e3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 179
-        }
+        "colab": {}
       },
       "source": [
         "history = model.fit_generator(\n",
@@ -485,23 +307,7 @@
         ") "
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
-            "\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:1020: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
-            "\n",
-            "Epoch 1/20\n",
-            "  9/224 [>.............................] - ETA: 9:07 - loss: 1.9053 - acc: 0.2066"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
