--- a/Final-SeNet50_WCW.ipynb
+++ b/Final-SeNet50_WCW.ipynb
@@ -210,9 +210,9 @@
       },
       "source": [
         "EPOCHS = 100\n",
-        "BS = 128\n",
+        "BS = 64\n",
         "DROPOUT_RATE = 0.5\n",
-        "FROZEN_LAYER_NUM = 201\n",
+        "FROZEN_LAYER_NUM = 199\n",
         "\n",
         "ADAM_LEARNING_RATE = 0.001\n",
         "SGD_LEARNING_RATE = 0.01\n",
@@ -257,7 +257,44 @@
         "\n",
         "out = Dense(7, activation='softmax', name='classifier')(x)\n",
         "\n",
+        "model = Model(vgg_vgg_notop = VGGFace(model='senet50', include_top=False, input_shape=(Resize_pixelsize, Resize_pixelsize, 3), pooling='avg')\n",
+        "last_layer = vgg_notop.get_layer('avg_pool').output\n",
+        "x = Flatten(name='flatten')(last_layer)\n",
+        "x = Dropout(DROPOUT_RATE)(x)\n",
+        "x = BatchNormalization()(x)\n",
+        "x = Dense(4096, activation='relu', name='fc6')(x)\n",
+        "x = Dropout(DROPOUT_RATE)(x)\n",
+        "x = Dense(1024, activation='relu', name='fc7')(x)\n",
+        "x = Dropout(DROPOUT_RATE)(x)\n",
+        "# l=0\n",
+        "# for layer in vgg_notop.layers:\n",
+        "#     print(layer,\"[\"+str(l)+\"]\")\n",
+        "#     l=l+1\n",
+        "\n",
+        "batch_norm_indices = [2, 6, 9, 12, 21, 25, 28, 31, 42, 45, 48, 59, 62, 65, 74, 78, 81, 84, 95, 98, 101, 112, 115, 118, 129, 132, 135, 144, 148, 151, 154, 165, 168, 171, 182, 185, 188, 199, 202, 205, 216, 219, 222, 233, 236, 239, 248, 252, 255, 258, 269, 272, 275]    \n",
+        "for i in range(FROZEN_LAYER_NUM):\n",
+        "    if i not in batch_norm_indices:\n",
+        "        vgg_notop.layers[i].trainable = False\n",
+        "# print('vgg layer 2 is trainable: ' + str(vgg_notop.layers[2].trainable))\n",
+        "# print('vgg layer 3 is trainable: ' + str(vgg_notop.layers[3].trainable))\n",
+        "\n",
+        "out = Dense(7, activation='softmax', name='classifier')(x)\n",
+        "\n",
         "model = Model(vgg_notop.input, out)\n",
+        "\n",
+        "\n",
+        "optim = keras.optimizers.Adam(lr=ADAM_LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
+        "#optim = keras.optimizers.Adam(lr=0.0005, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
+        "sgd = keras.optimizers.SGD(lr=SGD_LEARNING_RATE, momentum=0.9, decay=SGD_DECAY, nesterov=True)\n",
+        "\n",
+        "# checkpoint\n",
+        "cp_filepath='/content/drive/My Drive/cs230 project/models/final/SENET50/weights.best.hdf5'\n",
+        "rlrop = keras.callbacks.ReduceLROnPlateau(monitor='val_acc',mode='max',factor=0.5, patience=10, min_lr=0.00001, verbose=1)\n",
+        "checkpoint = ModelCheckpoint(cp_filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
+        "callbacks_list = [rlrop,checkpoint]\n",
+        "\n",
+        "model.compile(optimizer=sgd, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "# plot_model(model, to_file='model2.png', show_shapes=True)notop.input, out)\n",
         "\n",
         "\n",
         "optim = keras.optimizers.Adam(lr=ADAM_LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
@@ -502,7 +539,8 @@
         "    #validation_steps=3509 // BS,\n",
         "    shuffle=True,\n",
         "    epochs=100,\n",
-        "    callbacks=[rlrop],\n",
+        "    callbacks=callbacks_list,\n",
+        "    #callbacks=[rlrop],\n",
         "    use_multiprocessing=True,\n",
         "    class_weight=class_weights\n",
         ") "
