--- a/datasets/affectnet_to_png.ipynb
+++ b/datasets/affectnet_to_png.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ck+_to_png.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDaNeqQdN+hUoiCgOeYAAW",
+      "mount_file_id": "https://github.com/amilkh/cs230-fer/blob/master/datasets/affectnet_to_png.ipynb",
+      "authorship_tag": "ABX9TyP0yZ3hd0CQIaLfMbomzjaD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/master/affectnet_to_png.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/master/datasets/affectnet_to_png.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,14 +60,53 @@
       "metadata": {
         "id": "J76fXHTw-FCU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "5d3c3b27-4581-4b4c-d8ea-d3d42a7e5f1e"
       },
       "source": [
         "! rm -rf /content/affectnet && mkdir /content/affectnet\n",
         "! unrar e -idq '/content/drive/My Drive/cs230 project/dataset/affectnet/Manually_Annotated.part01.rar' /content/affectnet"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Cannot find volume /content/drive/My Drive/cs230 project/dataset/affectnet/Manually_Annotated.part06.rar\n",
+            "Manually_Annotated_Images/461/d45ace15e1ed59b21e7665fe337d056d7236bf1b668a0b64cdaeea12.jpg - checksum error"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a3gZOJmkEpcX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3c4eb36e-e54b-4e75-902c-7f6a636b2492"
+      },
+      "source": [
+        "! ls -1 /content/affectnet | wc -l"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "193591\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,8 +120,8 @@
         "\n",
         "train_csv = pd.read_csv('/content/drive/My Drive/cs230 project/dataset/affectnet/training.csv')\n",
         "\n",
-        "# emotions = {0:'angry', 1:'disgust', 2:'fear', 3:'happy', 4:'sad', 5:'surprise', 6:'neutral'}\n",
-        "# 0: Neutral, 1: Happiness, 2: Sadness, 3: Surprise, 4: Fear, 5: Disgust, 6: Anger, 7: Contempt, 8: None, 9: Uncertain, 10: No-Face\n",
+        "# FER2013 = {0:'angry', 1:'disgust', 2:'fear', 3:'happy', 4:'sad', 5:'surprise', 6:'neutral'}\n",
+        "# AffectNet = 0: Neutral, 1: Happiness, 2: Sadness, 3: Surprise, 4: Fear, 5: Disgust, 6: Anger, 7: Contempt, 8: None, 9: Uncertain, 10: No-Face\n",
         "def reindex_labels(y):\n",
         "    label_mapping = {0:6,1:3,2:4,3:5,4:2,5:1,6:0,7:7,8:8,9:9,10:10}\n",
         "    for label in label_mapping.keys():\n",
@@ -95,6 +135,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "bqSj7t1MFde5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        },
+        "outputId": "2a700724-edd9-44be-d24d-450a196443f2"
+      },
+      "source": [
+        "train_csv[train_csv['subDirectory_filePath']=='163/7b5d3644888582a32c7896e7f58f400f179f1fd8c48feb286e2cd8d4.jpg']"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>subDirectory_filePath</th>\n",
+              "      <th>face_x</th>\n",
+              "      <th>face_y</th>\n",
+              "      <th>face_width</th>\n",
+              "      <th>face_height</th>\n",
+              "      <th>facial_landmarks</th>\n",
+              "      <th>expression</th>\n",
+              "      <th>valence</th>\n",
+              "      <th>arousal</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>163/7b5d3644888582a32c7896e7f58f400f179f1fd8c4...</td>\n",
+              "      <td>100</td>\n",
+              "      <td>100</td>\n",
+              "      <td>669</td>\n",
+              "      <td>669</td>\n",
+              "      <td>220.53;366.29;223.18;430.64;234.1;493.62;250.6...</td>\n",
+              "      <td>10</td>\n",
+              "      <td>-2.0</td>\n",
+              "      <td>-2.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                subDirectory_filePath  face_x  ...  valence  arousal\n",
+              "11  163/7b5d3644888582a32c7896e7f58f400f179f1fd8c4...     100  ...     -2.0     -2.0\n",
+              "\n",
+              "[1 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "zd3pBrfRWLCs",
         "colab_type": "code",
         "colab": {}
@@ -104,6 +224,36 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uu4HDJJtFukB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f7c53ecb-f659-4952-abd3-383456296355"
+      },
+      "source": [
+        "train_csv(0)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pandas.core.indexing._iLocIndexer at 0x7f3bbf7adcc8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -133,16 +283,16 @@
       "metadata": {
         "id": "REQj2eX6Y7ZJ",
         "colab_type": "code",
+        "outputId": "d550066b-8d9d-459d-f007-b576f586e81e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "d550066b-8d9d-459d-f007-b576f586e81e"
+        }
       },
       "source": [
         "train_csv[train_csv['subDirectory_filePath'] == train_csv.iloc[0]['subDirectory_filePath'][0]]['subDirectory_filePath']"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
