--- a/fer2013-AUX.ipynb
+++ b/fer2013-AUX.ipynb
@@ -190,19 +190,19 @@
         "# Reference: https://arxiv.org/pdf/1612.02903.pdf\n",
         "model = Sequential()\n",
         "model.add(BatchNormalization(input_shape=(48,48,1)))\n",
-        "model.add(Conv2D(32, (5, 5), activation='tanh',padding='same', input_shape=(48,48,1),name=\"conv1\"))\n",
+        "model.add(Conv2D(32, (5, 5), activation='relu',padding='same', input_shape=(48,48,1),name=\"conv1\"))\n",
         "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(pool_size=(2, 2),name=\"maxpool1\"))\n",
-        "model.add(Dropout(0.1))\n",
-        "model.add(Conv2D(32, (4, 4), activation='tanh',padding='same',name=\"conv2\"))\n",
+        "#model.add(Dropout(0.1))\n",
+        "model.add(Conv2D(32, (4, 4), activation='relu',padding='same',name=\"conv2\"))\n",
         "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(pool_size=(2, 2),name=\"maxpool2\"))         \n",
         "#model.add(Dropout(DROPOUT_RATE))\n",
-        "model.add(Conv2D(64, (5, 5), activation='tanh',padding='same',name=\"conv3\"))\n",
+        "model.add(Conv2D(64, (5, 5), activation='relu',padding='same',name=\"conv3\"))\n",
         "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(pool_size=(2, 2),name=\"maxpool3\"))\n",
         "model.add(Flatten())\n",
-        "model.add(Dense(1024, activation='tanh',name='fc1'))\n",
+        "model.add(Dense(1024, activation='relu',name='fc1'))\n",
         "model.add(Dropout(DROPOUT_RATE))\n",
         "model.add(BatchNormalization())\n",
         "model.add(Dense(7, activation='softmax',name='fcsoftmax'))\n",
