--- a/fer2013-AUX.ipynb
+++ b/fer2013-AUX.ipynb
@@ -39,7 +39,7 @@
       "source": [
         "%tensorflow_version 1.4"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +88,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "print(tf.__version__)\n",
         "print(keras.__version__)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
       "source": [
         "EPOCHS = 150\n",
         "BS = 128\n",
-        "DROPOUT_RATE = 0.35\n",
+        "DROPOUT_RATE = 0.3\n",
         "SGD_LEARNING_RATE = 0.01\n",
         "SGD_DECAY = 0.0001"
       ],
@@ -217,7 +217,7 @@
         "checkpoint = ModelCheckpoint(cp_filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
         "callbacks_list = [rlrop,checkpoint]"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "    do printf \"$dir: \" && ls -i \"$root$dir\" | wc -l\n",
         " done)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,7 +382,7 @@
         "dev_generator    = get_datagen('/content/dev')\n",
         "test_generator  = get_datagen('/content/test')\n"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,18 +724,18 @@
       "metadata": {
         "id": "5aUXi05NXeol",
         "colab_type": "code",
+        "outputId": "d645d28f-d694-4b26-a3c4-803de148e372",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "d645d28f-d694-4b26-a3c4-803de148e372"
+        }
       },
       "source": [
         "print('\\n# Evaluate on dev data')\n",
         "results_dev = model.evaluate_generator(dev_generator, 3509 // BS)\n",
         "print('dev loss, dev acc:', results_dev)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,18 +753,18 @@
       "metadata": {
         "id": "iXTV7TokXfx1",
         "colab_type": "code",
+        "outputId": "87aa424a-4c07-4bfd-bfc5-6ed89b20ac61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "87aa424a-4c07-4bfd-bfc5-6ed89b20ac61"
+        }
       },
       "source": [
         "print('\\n# Evaluate on test data')\n",
         "results_test = model.evaluate_generator(test_generator, 3509 // BS)\n",
         "print('test loss, test acc:', results_test)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,11 +782,11 @@
       "metadata": {
         "id": "N65tgp91XiWO",
         "colab_type": "code",
+        "outputId": "a3e8f945-7b2c-4d37-f163-d3fdb10ea237",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 590
-        },
-        "outputId": "a3e8f945-7b2c-4d37-f163-d3fdb10ea237"
+        }
       },
       "source": [
         "# list all data in history\n",
@@ -808,7 +808,7 @@
         "plt.legend(['train', 'dev'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,8 +852,9 @@
       },
       "source": [
         "epoch_str = '-EPOCHS_' + str(EPOCHS)\n",
-        "test_acc = 'test_acc_%.3f' % results_test[1]\n",
-        "model.save('/content/drive/My Drive/cs230 project/models/' + 'SOA' + epoch_str + test_acc + '.h5')"
+        "dropout_str = '-DROPOUT_' + str(DROPOUT_RATE)\n",
+        "test_acc = '-test_acc_%.3f' % results_test[1]\n",
+        "model.save('/content/drive/My Drive/cs230 project/models/' + 'SOA' + epoch_str + dropout_str + test_acc + '.h5')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -863,11 +864,11 @@
       "metadata": {
         "id": "27rHaOQlzzCY",
         "colab_type": "code",
+        "outputId": "dee1a057-eba5-4393-fd64-2b6f7e91fa2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 399
-        },
-        "outputId": "dee1a057-eba5-4393-fd64-2b6f7e91fa2b"
+        }
       },
       "source": [
         "emotions = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
@@ -889,7 +890,7 @@
         "plt.xlabel('Predicted label')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -955,11 +956,11 @@
       "metadata": {
         "id": "gfTihcArMdUk",
         "colab_type": "code",
+        "outputId": "229c2402-7515-4302-aac5-8c76b546f1e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 249
-        },
-        "outputId": "229c2402-7515-4302-aac5-8c76b546f1e1"
+        }
       },
       "source": [
         "print('\\n# Evaluate on test data')\n",
@@ -967,7 +968,7 @@
         "print('test loss, test acc:', results_test)\n",
         "print('TTA test acc:', TTA_results_test)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
